svg file route change(public->src), create Cart Components, install and use Recoil Library, create atoms for using global state, set Menu bar in Header, and setting css etc...

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
   --base--orange: hsl(26, 100%, 55%);
   --subBase--orange: hsl(25, 100%, 94%);
 
-  --mainHead-blue: hsl(220, 13%, 13%);
+  --mainHead--blue: hsl(220, 13%, 13%);
   --mainP--blue: hsl(219, 9%, 45%);
   --basePrice--blue: hsl(220, 14%, 75%);
   --countBtn--white: hsl(223, 64%, 98%);
